--- a/index.html
+++ b/index.html
@@ -36,6 +36,16 @@
         <p>19-7-2024</p>
         <button><a href="19-7-24/index.html">Read more</a></button>
     </div>
+    <div class="b">
+        <h1>sixth assiement</h1>
+        <p>22-7-2024</p>
+        <button><a href="22-7-24/index.html">Read more</a></button>
+    </div>
+    <div class="b">
+        <h1>seventh assiement</h1>
+        <p>24-7-2024</p>
+        <button><a href="24-7-24/index.html">Read more</a></button>
+    </div>
 
 </div>
 
