--- a/24-7-24/index.html
+++ b/24-7-24/index.html
@@ -130,8 +130,8 @@
         </nav>
     </header>
     <div class="s">
-        <h1>BEST OF LUCK</h1>
+        <button class="mm"><a class="ll" href="../../index.html">MAIN PAGE</a></button>
     </div>
-    <div class="nn"><button class="mm"><a class="ll" href="../../index.html">MAIN PAGE</a></button></div>
+
 </body>
 </html>
