--- a/24-7-24/index.html
+++ b/24-7-24/index.html
@@ -130,7 +130,7 @@
         </nav>
     </header>
     <div class="s">
-        <button class="mm"><a class="ll" href="../../index.html">MAIN PAGE</a></button>
+        <button class="mm"><a class="ll" href="../index.html">MAIN PAGE</a></button>
     </div>
 
 </body>
