--- a/22-7-24/index.html
+++ b/22-7-24/index.html
@@ -75,7 +75,7 @@
             
             <p>Even after being instructed by his mother, Mickey Mouse didn’t keep his toys in place. Mickey was so busy playing with Minnie that he didn’t listen to his mother, and his uncle tumbled over his toy and fell. Thus, the moral of the story is that we should always listen to our elders and must obey them. </p>
         </div>
-    <div class="nn"><button class="mm"><a class="ll" href="../../index.html">MAIN PAGE</a></button></div>
+    <div class="nn"><button class="mm"><a class="ll" href="../index.html">MAIN PAGE</a></button></div>
         <header >
             <nav class="n">
                 
