--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
         <p>24-7-2024</p>
         <button><a href="24-7-24/index.html">Read more</a></button>
     </div>
+    <div class="b">
+        <h1>eighth assiement</h1>
+        <p>26-7-2024</p>
+        <button><a href="26-7-24/index.html">Read more</a></button>
+    </div>
 
 </div>
 
